contacs.css double scrollbar prevented

--- a/assets/templates/contacs/contacs.css
+++ b/assets/templates/contacs/contacs.css
@@ -1242,3 +1242,10 @@
 
 
 }
+
+@media only screen and (max-width: 750px) {
+  .container {
+    height: auto!important;
+    overflow-y: hidden!important;
+  }
+}
